objects/Covered_Country__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BR - 10157</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Covered Countries</relationshipLabel>
        <relationshipName>Covered_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Quality_Alert__c</fullName>
        <description>BR - 10157</description>
        <label>Product Quality Alert</label>
        <referenceTo>Product_Quality_Alert__c</referenceTo>
        <relationshipLabel>Covered Countries</relationshipLabel>
        <relationshipName>Covered_Countries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UniqueCountry__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>BR - 10157</description>
        <label>UniqueCountry</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Covered Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Quality_Alert__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Covered Country Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covered Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>